--- a/src/Seade/Seade.csproj
+++ b/src/Seade/Seade.csproj
@@ -40,6 +40,7 @@
     <Compile Include="IConfigurationService.cs" />
     <Compile Include="IDefaultValueProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <None Include="Seade.nuspec" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
